Add Teaching Experience section

--- a/CV_Simone_Zasso.tex
+++ b/CV_Simone_Zasso.tex
@@ -24,21 +24,26 @@
 
 % Work experience
 
-\ecvsection{Work experience}
+\ecvsection{Work Experience}
 
 \ecvtitle{02/2024 -- Current}{Research Fellow}
 \ecvitem{}{University of Trento, Department of Psychology and Cognitive Science\newline Corso Bettini 31, 38068, Rovereto, Italy}
 \ecvitem{}{\textbf{Project title} \textit{‘Loneliness, non-cognitive skills, and academic achievement in Junior High School: Assessment and intervention based on Big Data, longitudinal, and intensive method'}}
    
-\ecvtitle{09/2023 -- 12/2023}{Teaching Support}
-\ecvitem{}{University of Trento, Department of Psychology and Cognitive Science\newline Corso Bettini 31, 38068, Rovereto , Italy}
-  \ecvitem{}{Mathematical methods for cognitive science [150175]}
+
 
 \ecvtitle{04/2023 -- 08/2023}{Research Fellow}
 \ecvitem{}{University of Trento, Department of Psychology and Cognitive Science\newline Corso Bettini 31, 38068, Rovereto, Italy}
 \ecvitem{}{\textbf{Project titled }\textit{‘Learning and Emotions’}}
 
 % Internship
+
+\ecvsection{Teaching Experience}
+
+\ecvtitle{09/2023 -- 12/2023}{Teaching Support}
+\ecvitem{}{University of Trento, Department of Psychology and Cognitive Science\newline Corso Bettini 31, 38068, Rovereto , Italy}
+\ecvitem{}{Mathematical methods for cognitive science [150175]}
+
 \ecvsection{Internship}
 
  \ecvtitle{02/2024 -- Current}{Internship in Psychotherapy}
