Add Decarli et al.,(2024)

--- a/CV_Simone_Zasso.tex
+++ b/CV_Simone_Zasso.tex
@@ -132,7 +132,7 @@ Castrozza
 
 \ecvsection{Publications}
  
-\ecvblueitem{[2]}{Decarli, G., Zasso, S., Vitali, F., \& Franchin, L. (2023). The power of coaches' emotions: How coaches' positive and negative expressions impact emotions and team performance of elite female synchronized ice-skaters. \textit{Psychology of Sport and Exercise}, 102651.}
+\ecvblueitem{[2]}{Decarli, G., Vitali, F., Zasso, S., \& Franchin, L. (2024). The Power of Coaches' Emotions: A Case Study on How Coaches' Facial Expressions Impact Performance of Female Synchronized Ice-Skaters. \textit{Psychology of Sport and Exercise}, 102651.}
 
 \ecvblueitem{[1]}{Zasso, S., Decarli, G., Vitali, F., \& Franchin, L. (2023). L’influenza delle emozioni positive e negative degli allenatori sullo stato emotivo e sulla prestazione di giovani tennisti. \textit{Giornale italiano di psicologia}, 50(2), 321-336.} 
 
