add new item Professional Education

--- a/CV_Simone_Zasso.tex
+++ b/CV_Simone_Zasso.tex
@@ -101,6 +101,10 @@ Castrozza
 
 \ecvsection{Professional Education}
 
+\ecvtitlelevel{4 April 2024}{Communication in psycho-oncological context}{}
+\ecvitem{}{University of Trento - Department of Psychology and Cognitive Science; Società Italiana di Psico-Oncologica (SIPO)}
+\ecvitem{}{\textbf{Total hours:} 8}
+
  \ecvtitlelevel{16-17 March 2024}{CBT Essentials e CBT Core Anxiety and Depression}{}
   \ecvitem{}{Studi Cognitivi - Bolzano, Italy}
   \ecvitem{}{\textbf{Total hours:} 16}
