Add new Professional Education

--- a/CV_Simone_Zasso.tex
+++ b/CV_Simone_Zasso.tex
@@ -101,6 +101,14 @@ Castrozza
 
 \ecvsection{Professional Education}
 
+  \ecvtitlelevel{4-5 May 2024}{Assessment and initial management of eating disorders (ED)}{}
+\ecvitem{}{Studi Cognitivi - Bolzano, Italy}
+\ecvitem{}{\textbf{Total hours:} 16} 
+
+  \ecvtitlelevel{14 April 2024}{Guidelines for therapy with LGBTQIA+ people}{}
+\ecvitem{}{Studi Cognitivi - Bolzano, Italy}
+\ecvitem{}{\textbf{Total hours:} 8} 
+
 \ecvtitlelevel{4 April 2024}{Communication in psycho-oncological context}{}
 \ecvitem{}{University of Trento - Department of Psychology and Cognitive Science; Società Italiana di Psico-Oncologica (SIPO)}
 \ecvitem{}{\textbf{Total hours:} 8}
@@ -136,7 +144,7 @@ Castrozza
 
 \ecvsection{Publications}
  
-\ecvblueitem{[2]}{Decarli, G., Vitali, F., Zasso, S., \& Franchin, L. (2024). The Power of Coaches' Emotions: A Case Study on How Coaches' Facial Expressions Impact Performance of Female Synchronized Ice-Skaters. \textit{Psychology of Sport and Exercise}, 102651.}
+\ecvblueitem{[2]}{Decarli, G., Vitali, F., Zasso, S., \& Franchin, L. (2024). The power of coaches' emotions: A case study on how coaches' facial expressions impact performance of young female synchronized ice-skaters \textit{Psychology of Sport and Exercise}, 102651.}
 
 \ecvblueitem{[1]}{Zasso, S., Decarli, G., Vitali, F., \& Franchin, L. (2023). L’influenza delle emozioni positive e negative degli allenatori sullo stato emotivo e sulla prestazione di giovani tennisti. \textit{Giornale italiano di psicologia}, 50(2), 321-336.} 
 
