add section Awards

--- a/CV_Simone_Zasso.tex
+++ b/CV_Simone_Zasso.tex
@@ -141,6 +141,10 @@ Castrozza
      \item \textbf{Certifications} European Computer Driving Licence (ECDL)
  \end{itemize}}
 
+\ecvsection{Awards}
+
+ \ecvtitlelevel{2023}{Study award Cassa Rurale Dolomiti - Credito cooperativo italiano }{}
+\ecvitem{}{Amount awarded: € 650}
 
 \ecvsection{Publications}
  
