add oral presentation

--- a/CV_Simone_Zasso.tex
+++ b/CV_Simone_Zasso.tex
@@ -154,6 +154,10 @@ Castrozza
 
 \ecvsection{Presentations}
 
+ \ecvblueitem{[2]}{Zasso, S., Sette, S., Pisanu, F., Fraccaroli,F., \& Perinelli, E. (2024, JUNE 3-6). The Mediational Role of Math Anxiety in the Link Between Loneliness and Math Achievement: An Analysis using PISA 2022 [Conference oral presentation]. Third International Conference of the journal "Scuola Democratica"
+ education and/for social justice, Cagliari (Italy) 
+ 	.} 
+ 	 
  \ecvblueitem{[1]}{Zasso, S., Franchin, L., Corazza G.E., \& Agnoli, S.  (2023, September 11-13). Distracted by words: the roles of irrelevance processing and openness on creative performance [Conference oral presentation abstract]. The 7th Marconi Institute for Creativity (MIC) Conference 2023 Trieste (Italy) 
 .}  
  
