add oral presentation

--- a/CV_Simone_Zasso.tex
+++ b/CV_Simone_Zasso.tex
@@ -154,7 +154,7 @@ Castrozza
 
 \ecvsection{Presentations}
 
- \ecvblueitem{[2]}{Zasso, S., Sette, S., Pisanu, F., Fraccaroli,F., \& Perinelli, E. (2024, JUNE 3-6). The Mediational Role of Math Anxiety in the Link Between Loneliness and Math Achievement: An Analysis using PISA 2022 [Conference oral presentation]. Third International Conference of the journal "Scuola Democratica"
+ \ecvblueitem{[2]}{Zasso, S., Sette, S., Pisanu, F., Fraccaroli,F., \& Perinelli, E. (2024, JUNE 3-6). The Mediational Role of Math Anxiety in the Link Between Loneliness and Math Achievement: An Analysis using PISA 2022 [Oral presentation]. Third International Conference of the journal "Scuola Democratica"
  education and/for social justice, Cagliari (Italy) 
  	.} 
  	 
