add oral presentation EARA 2024

--- a/CV_Simone_Zasso.tex
+++ b/CV_Simone_Zasso.tex
@@ -154,6 +154,10 @@ Castrozza
 
 \ecvsection{Presentations}
 
+ \ecvblueitem{[3]}{Zasso, S., Sette, S., Pisanu, F., Fraccaroli,F., \& Perinelli, E. (2024, September 25-28 ). Links between Loneliness, Math Anxiety, and Academic Achievement in 15-Year-Old Adolescents: A Cross-National Latent Variable Analysis Using PISA 2022 [Oral presentation]. XIX EARA CONFERENCE 2024 - European Association for Research on Adolescence, Limassol, (Cyprus).}
+ 	 
+
+
  \ecvblueitem{[2]}{Zasso, S., Sette, S., Pisanu, F., Fraccaroli,F., \& Perinelli, E. (2024, JUNE 3-6). The Mediational Role of Math Anxiety in the Link Between Loneliness and Math Achievement: An Analysis using PISA 2022 [Oral presentation]. Third International Conference of the journal "Scuola Democratica"
  education and/for social justice, Cagliari (Italy) 
  	.} 
